--- a/requirements.txt
+++ b/requirements.txt
@@ -21,14 +21,17 @@ MarkupSafe==1.1.1
 mongoengine==0.20.0
 packaging==20.4
 phonenumbers==8.11.0
+Pillow==8.0.1
 plotly==4.14.1
 pluggy==0.13.1
 py==1.9.0
 pycparser==2.20
 pymongo==3.11.0
+pyotp==2.4.1
 pyparsing==2.4.7
 pytest==6.1.2
 python-dotenv==0.15.0
+qrcode==6.1
 requests==2.24.0
 retrying==1.3.3
 six==1.15.0
